[metadata]
name = gramtools
author = Brice Letcher
author_email = bletcher@ebi.ac.uk
version = 1.10.0
description = Genome inference and genotyping with genome graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iqbal-lab-org/gramtools
licence = MIT
licence_file = LICENCE

[options]
packages = find:
include_package_data = True
install_requires =
    biopython >= 1.78
    Cython >= 0.29
    pysam >= 0.15
    pybedtools >= 0.9
    cluster_vcf_records >= 0.9
    make_prg >= 0.2
    importlib-metadata >= 4.8.3;python_version<'3.8'
tests_require = 
    pytest >= 6.2.5
python_requires = >=3.6

[options.entry_points]
console_scripts =
    gramtools = gramtools.gramtools_main:run

[tool:pytest]
testpaths = gramtools/tests
